Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#7017 closed bug (fixed)

SAT Decorator crash

Reported by: cipri Owned by: czeidler
Priority: normal Milestone: R1
Component: Add-Ons/Decorators/Default Version: R1/Development
Keywords: SAT Cc:
Blocked By: Blocking:
Platform: All

Description

Easy to reproduce:

1) Tile to windows together. 2) Now take the window (like you take it to move it), but don't release the mouse, hold it pressed. 3) Press on the opt-key (windows sign)

Attachments (1)

syslog (29.4 KB ) - added by cipri 14 years ago.

Download all attachments as: .zip

Change History (10)

comment:1 by cipri, 14 years ago

something else related to the SAT Decorator. I don't know if it is a bug. But when i press Cntrl+Alt and move the mouse over the windows, then some edges are highlighted.

comment:2 by humdinger, 14 years ago

Can't reproduce with hrev39847. Yours isn't by chance similar to #7001?

The highlighted edges are a new feature (not related to S&T, I think). Pressing CTRL+ALT will highlight borders according to the location the mouse pointer in the current window. Move it to other borders or corners to see it change. Now, if you press the right mousebutton, you can resize the window along the highlighted border(s).

comment:3 by cipri, 14 years ago

with hrev39847 i also cannot reproduce it :-), it's not #7001 gdb indicates that the crash happens in the method which is responsible for splitting a group.

I noticed that crash on hrev39918

comment:4 by cipri, 14 years ago

SATGroup::_SplitIfNecessary() is the method, where gdb indicated that the crash happens...

I'm trying it now on 39962, and it's the same.

It's a real problem, I can group windows together, but when I want to split one, it crashes, that means, it is not usable. It's exactly now unusable when I need it (because I want to do some programming these days).

Nobody can reproduce it? Or did nobody try the SATDecorator in the last nightlies???

comment:5 by cipri, 14 years ago

Keywords: SAT added

by cipri, 14 years ago

Attachment: syslog added

comment:6 by diver, 14 years ago

Version: R1/alpha2R1/Development

We definitely need SAT component in Trac.

comment:7 by anevilyak, 14 years ago

Component: Add-OnsServers/app_server
Owner: changed from nobody to czeidler
Status: newassigned

comment:8 by czeidler, 14 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev40058.

comment:9 by diver, 14 years ago

Component: Servers/app_serverAdd-Ons/Decorators/Stack And Tile
Note: See TracTickets for help on using tickets.