Fix #7017 and hopefully #7001. WindowArea is not valid any more when splitting a group. Fix debug assert.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40058 a95241bf-73f2-0310-859d-f6bbb57e9c96